# video-app

./: .gitmodules
VideoApp/: CMakeLists.txt
VideoApp/include/: Shader.h  VideoApp.h
VideoApp/include/glad/: gl.h  glad.h
VideoApp/resources/shaders/vertex/: default.vs
VideoApp/src/: VideoApp.cpp  VideoApp.h  glad.c  hello_rectangle.cpp  main.cpp
VideoApp/src/shaders/fragment/: default.fs
VideoApp/src/shaders/vertex/: default.vs
